--- a/about.html
+++ b/about.html
@@ -3,9 +3,7 @@
 	<head>
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<title>Jaras</title>
-		
-		
+		<title>100 Mandarin 一百中文</title>
 		<link rel="stylesheet" href="static/css/bootstrap.min.css">
 		<link rel="stylesheet" href="static/css/fontawesome.min.css">
 		<link rel="stylesheet" href="static/css/LineIcons.css">
@@ -22,7 +20,7 @@
 		<!-- navbar -->
 		<nav class="navbar navbar-expand-md fixed-top">
 			<div class="container">
-				<a href="index.html" class="navbar-brand">Jaras</a>
+				<a href="index.html" class="navbar-brand">100Mandarin</a>
 				<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
 				<i class="fa fa-bars"></i>
 				</button>
@@ -66,19 +64,18 @@
 						<img src="static/picture/intro.png" alt="" class="w-100">
 					</div>
 					<div class="col col-12 col-md-6">
-						<h2>We are <span>Digital</span> Studio</h2>
+						<h2>We are <span>Mandarin</span> Studio</h2>
 						<h6>We are are professional</h6>
-						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Necessitatibus adipisci a cumque, distinctio, laudantium, repudiandae minima harum saepe autem at fugit quia eius dolorem facere quae animi? Debitis, eligendi, illum.</p>
-						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eaque pariatur velit odit? Cum quas ut voluptate dignissimos quibusdam exercitationem, delectus recusandae, dolorem excepturi corrupti eum labore perferendis. Velit, tempora, aliquam!</p>
-						<h5>Services</h5>
+						<p>This organization provides top-notch service</p>
+						<p>The expertise and knowledge demonstrated by this institution are exceptional.</p>
+						<h5>Education Services</h5>
 						<ul>
-							<li><span>-</span> Graphic Design</li>
-							<li><span>-</span> WordPress</li>
-							<li><span>-</span> Marketing</li>
-							<li><span>-</span> Branding</li>
-							<li><span>-</span> Logo</li>
-							<li><span>-</span> UI/UX Design</li>
-							<li><span>-</span> Drupal Web</li>
+							<li><span>-</span> HSK中文 </li>
+							<li><span>-</span> GCSE中文 </li>
+							<li><span>-</span> A-level中文 </li>
+							<li><span>-</span> IGCSE中文 </li>
+							<li><span>-</span> IBDP中文 </li>
+							<li><span>-</span> AP中文 </li>
 						</ul>
 					</div>
 					
@@ -93,13 +90,13 @@
 			<div class="container">
 				<div class="row">
 					<div class="col-md-6  col-sm-12">
-						<span>Copyright &copy; 2024.Company name All rights reserved.<a target="_blank" href="https://sc.chinaz.com/moban/">&#x7F51;&#x9875;&#x6A21;&#x677F;</a></span>
+						<span>Copyright &copy; 2024. <br> 100Mandarin All rights reserved.</span>
 					</div>
 					<div class="col-md-6  col-sm-12">
 						<ul>
-							<li><a href="">Facebook</a></li>
-							<li><a href="">Twitter</a></li>
-							<li><a href="">Dribble</a></li>
+							<li><a href="https://www.facebook.com">Facebook</a></li>
+							<li><a href="https://www.whatsapp.com">WhatsApp</a></li>
+							<li><a href="https://www.qq.com">WeChat</a></li>
 						</ul>
 					</div>
 				</div>
