--- a/index.html
+++ b/index.html
@@ -76,44 +76,44 @@
 				<div class="row mb-services">
 					<div class="col col-md-4 col-sm-6 col-12">
 						<div class="content">
-							<i class="fab fa-drupal"></i>
+								<img src="static/picture/youtube.svg" alt="" class="w-100">
 							<h5>HSK中文</h5>
-							<p class="mb-0">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloribus quisquam maxime eos, culpa minus placeat.</p>
+							<p class="mb-0">HSK中文</p>
 						</div>
 					</div>
 					<div class="col col-md-4 col-sm-6 col-12">
 						<div class="content">
-							<i class="fab fa-wordpress"></i>
+						<img src="static/picture/youtube.svg" alt="" class="w-100">
 							<h5>GCSE中文</h5>
-							<p class="mb-0">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloribus quisquam maxime eos, culpa minus placeat.</p>
+							<p class="mb-0">GCSE中文</p>
 						</div>
 					</div>
 					<div class="col col-md-4 col-sm-6 col-12">
 						<div class="content">
-							<i class="fab fa-magento"></i>
+						<img src="static/picture/youtube.svg" alt="" class="w-100">
 							<h5>A-level中文</h5>
-							<p class="mb-0">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloribus quisquam maxime eos, culpa minus placeat.</p>
+							<p class="mb-0">A-level中文</p>
 						</div>
 					</div>
 					<div class="col col-md-4 col-sm-6 col-12">
 						<div class="content">
-							<i class="fab fa-facebook"></i>
+						<img src="static/picture/youtube.svg" alt="" class="w-100">
 							<h5>IGCSE中文</h5>
-							<p class="mb-0">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloribus quisquam maxime eos, culpa minus placeat.</p>
+							<p class="mb-0">IGCSE中文</p>
 						</div>
 					</div>
 					<div class="col col-md-4 col-sm-6 col-12">
 						<div class="content">
-							<i class="fa fa-video"></i>
+						<img src="static/picture/youtube.svg" alt="" class="w-100">
 							<h5>IBDP中文</h5>
-							<p class="mb-0">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloribus quisquam maxime eos, culpa minus placeat.</p>
+							<p class="mb-0">IBDP中文</p>
 						</div>
 					</div>
 					<div class="col col-md-4 col-sm-6 col-12">
 						<div class="content">
-							<i class="fa fa-cog"></i>
+					<img src="static/picture/youtube.svg" alt="" class="w-100">
 							<h5>AP中文</h5>
-							<p class="mb-0">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloribus quisquam maxime eos, culpa minus placeat.</p>
+							<p class="mb-0">AP中文</p>
 						</div>
 					</div>
 				</div>
@@ -316,22 +316,22 @@
 		<div class="client">
 			<div class="row">
 				<div class="col-md-2 col-sm-4 col-6">
-					<img src="static/picture/client1.png" alt="" class="w-100">
+					<img src="static/picture/youtube.svg" alt="" class="w-100">
 				</div>
 				<div class="col-md-2 col-sm-4 col-6">
-					<img src="static/picture/client2.png" alt="" class="w-100">
+					<img src="static/picture/bilibili.svg" alt="" class="w-100">
 				</div>
 				<div class="col-md-2 col-sm-4 col-6">
-					<img src="static/picture/client3.png" alt="" class="w-100">
+					<img src="static/picture/tiktok.svg" alt="" class="w-100">
 				</div>
 				<div class="col-md-2 col-sm-4 col-6">
-					<img src="static/picture/client3.png" alt="" class="w-100">
+					<img src="static/picture/weixin.svg" alt="" class="w-100">
 				</div>
 				<div class="col-md-2 col-sm-4 col-6">
-					<img src="static/picture/client5.png" alt="" class="w-100">
+					<img src="static/picture/twitter.svg" alt="" class="w-100">
 				</div>
 				<div class="col-md-2 col-sm-4 col-6">
-					<img src="static/picture/client6.png" alt="" class="w-100">
+					<img src="static/picture/whatsapp.svg" alt="" class="w-100">
 				</div>
 			</div>
 		</div>
@@ -350,21 +350,21 @@
 					<div class="carousel-inner">
 						<div class="carousel-item active">
 							<span><i class="lni lni-comments"></i></span>
-							<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aspernatur molestiae totam corporis asperiores, id rerum quod officia, dolor ducimus earum doloremque ipsa vel, debitis dolorem, laudantium! In veritatis a, atque!</p>
+							<p>I am highly impressed by the quality of service offered by this establishment.</p>
 							<h5>Jamal Ali</h5>
-							<span>Business</span>
+							<span>Student</span>
 						</div>
 						<div class="carousel-item">
 							<span><i class="lni lni-comments"></i></span>
-							<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aspernatur molestiae totam corporis asperiores, id rerum quod officia, dolor ducimus earum doloremque ipsa vel, debitis dolorem, laudantium! In veritatis a, atque!</p>
+							<p>This institution has an impeccable reputation for excellence.</p>
 							<h5>Nabil Dirar</h5>
-							<span>Content Creator</span>
+							<span>Student</span>
 						</div>
 						<div class="carousel-item">
 							<span><i class="lni lni-comments"></i></span>
-							<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aspernatur molestiae totam corporis asperiores, id rerum quod officia, dolor ducimus earum doloremque ipsa vel, debitis dolorem, laudantium! In veritatis a, atque!</p>
+							<p>I would highly recommend this establishment for its exceptional standards.</p>
 							<h5>Moussa Silla</h5>
-							<span>Entrepreneur</span>
+							<span>Student</span>
 						</div>
 					</div>
 
@@ -378,13 +378,13 @@
 			<div class="container">
 				<div class="row">
 					<div class="col-md-6  col-sm-12">
-						<span>Copyright &copy; 2024.Company name All rights reserved.<a target="_blank" href="https://sc.chinaz.com/moban/">&#x7F51;&#x9875;&#x6A21;&#x677F;</a></span>
+						<span>Copyright &copy; 2024. <br> 100Mandarin All rights reserved.</span>
 					</div>
 					<div class="col-md-6  col-sm-12">
 						<ul>
-							<li><a href="">Facebook</a></li>
-							<li><a href="">Twitter</a></li>
-							<li><a href="">Dribble</a></li>
+							<li><a href="https://www.facebook.com">Facebook</a></li>
+							<li><a href="https://www.whatsapp.com">WhatsApp</a></li>
+							<li><a href="https://www.qq.com">WeChat</a></li>
 						</ul>
 					</div>
 				</div>
