--- a/portfolio.html
+++ b/portfolio.html
@@ -3,9 +3,7 @@
 	<head>
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<title>Jaras</title>
-		
-		
+		<title>100 Mandarin 一百中文</title>
 		<link rel="stylesheet" href="static/css/bootstrap.min.css">
 		<link rel="stylesheet" href="static/css/fontawesome.min.css">
 		<link rel="stylesheet" href="static/css/LineIcons.css">
@@ -22,7 +20,7 @@
 		<!-- navbar -->
 		<nav class="navbar navbar-expand-md fixed-top">
 			<div class="container">
-				<a href="index.html" class="navbar-brand">Jaras</a>
+				<a href="index.html" class="navbar-brand">100Mandarin</a>
 				<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
 				<i class="fa fa-bars"></i>
 				</button>
@@ -253,13 +251,13 @@
 			<div class="container">
 				<div class="row">
 					<div class="col-md-6  col-sm-12">
-						<span>Copyright &copy; 2024.Company name All rights reserved.<a target="_blank" href="https://sc.chinaz.com/moban/">&#x7F51;&#x9875;&#x6A21;&#x677F;</a></span>
+						<span>Copyright &copy; 2024. <br> 100Mandarin All rights reserved.</span>
 					</div>
 					<div class="col-md-6  col-sm-12">
 						<ul>
-							<li><a href="">Facebook</a></li>
-							<li><a href="">Twitter</a></li>
-							<li><a href="">Dribble</a></li>
+							<li><a href="https://www.facebook.com">Facebook</a></li>
+							<li><a href="https://www.whatsapp.com">WhatsApp</a></li>
+							<li><a href="https://www.qq.com">WeChat</a></li>
 						</ul>
 					</div>
 				</div>
