--- a/services.html
+++ b/services.html
@@ -3,9 +3,7 @@
 	<head>
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<title>Jaras</title>
-		
-		
+		<title>100 Mandarin 一百中文</title>
 		<link rel="stylesheet" href="static/css/bootstrap.min.css">
 		<link rel="stylesheet" href="static/css/fontawesome.min.css">
 		<link rel="stylesheet" href="static/css/LineIcons.css">
@@ -22,7 +20,7 @@
 		<!-- navbar -->
 		<nav class="navbar navbar-expand-md fixed-top">
 			<div class="container">
-				<a href="index.html" class="navbar-brand">Jaras</a>
+				<a href="index.html" class="navbar-brand">100 Mandarin</a>
 				<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
 				<i class="fa fa-bars"></i>
 				</button>
@@ -65,43 +63,49 @@
 					<div class="col col-md-4 col-sm-6 col-12">
 						<div class="content">
 							<i class="fab fa-drupal"></i>
-							<h5>Drupal</h5>
-							<p class="mb-0">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloribus quisquam maxime eos, culpa minus placeat.</p>
+							<h5>GCSE中文</h5>
+							<p class="mb-0">GCSE中文</p>
+
 						</div>
 					</div>
 					<div class="col col-md-4 col-sm-6 col-12">
 						<div class="content">
 							<i class="fab fa-wordpress"></i>
-							<h5>WordPress</h5>
-							<p class="mb-0">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloribus quisquam maxime eos, culpa minus placeat.</p>
+							<h5>A-level中文</h5>
+							<p class="mb-0">A-level中文</p>
+
 						</div>
 					</div>
 					<div class="col col-md-4 col-sm-6 col-12">
 						<div class="content">
 							<i class="fab fa-magento"></i>
-							<h5>Magento</h5>
-							<p class="mb-0">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloribus quisquam maxime eos, culpa minus placeat.</p>
+							<h5>IGCSE中文</h5>
+							<p class="mb-0">IGCSE中文</p>
+
 						</div>
 					</div>
 					<div class="col col-md-4 col-sm-6 col-12">
 						<div class="content">
 							<i class="fab fa-facebook"></i>
-							<h5>Facebook Ads</h5>
-							<p class="mb-0">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloribus quisquam maxime eos, culpa minus placeat.</p>
+							<h5>IBDP中文</h5>
+							<p class="mb-0">IBDP中文</p>
+
 						</div>
 					</div>
 					<div class="col col-md-4 col-sm-6 col-12">
 						<div class="content">
 							<i class="fa fa-video"></i>
-							<h5>Audio Editing</h5>
-							<p class="mb-0">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloribus quisquam maxime eos, culpa minus placeat.</p>
+							<h5>AP中文</h5>
+							<p class="mb-0">AP中文</p>
+
 						</div>
 					</div>
 					<div class="col col-md-4 col-sm-6 col-12">
 						<div class="content">
 							<i class="fa fa-cog"></i>
-							<h5>Maintenance</h5>
-							<p class="mb-0">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloribus quisquam maxime eos, culpa minus placeat.</p>
+							<h5>AP中文</h5>
+							<p class="mb-0">AP中文</p>
+
 						</div>
 					</div>
 				</div>
@@ -115,13 +119,13 @@
 			<div class="container">
 				<div class="row">
 					<div class="col-md-6  col-sm-12">
-						<span>Copyright &copy; 2024.Company name All rights reserved.<a target="_blank" href="https://sc.chinaz.com/moban/">&#x7F51;&#x9875;&#x6A21;&#x677F;</a></span>
+						<span>Copyright &copy; 2024. <br> 100Mandarin All rights reserved.</span>
 					</div>
 					<div class="col-md-6  col-sm-12">
 						<ul>
-							<li><a href="">Facebook</a></li>
-							<li><a href="">Twitter</a></li>
-							<li><a href="">Dribble</a></li>
+							<li><a href="https://www.facebook.com">Facebook</a></li>
+							<li><a href="https://www.whatsapp.com">WhatsApp</a></li>
+							<li><a href="https://www.qq.com">WeChat</a></li>
 						</ul>
 					</div>
 				</div>
